--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   django:
     build: .
     container_name: django
-    command: python manage.py runserver 0.0.0.0:8000
+    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     env_file:
       - .env
     volumes:
@@ -23,8 +23,8 @@ services:
     ports:
       - "5432:5432"
     volumes:
+      - ./backup.sql:/docker-entrypoint-initdb.d/backup.sql
       - dbdata:/var/lib/postgresql/data
-      - ./backup.sql:/backup.sql
   pgadmin:
     container_name: pgadmin4_container
     image: dpage/pgadmin4
